# claude-statusLine-rust-tinybinary

./: .gitignore  Cargo.toml  MAINTAINERS.md  Makefile  README.md  add-to-claude-settings.py
integration-tests/: Dockerfile  README.md  clean-docker-artifacts.sh  run.sh
ramblings/: 2026-07-21--get-regex-producer-side-contract-and-single-binary-decision.md
src/: main.rs
