[package]
name = "claude-statusline-rust-tinybinary"
version = "0.1.0"
edition = "2021"
description = "Fast Rust status line renderer for Claude Code"
license = "MIT"

[dependencies]
serde_json = "1"

[profile.release]
opt-level = "s"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
